fixed reset password issue

--- a/ShopManagement/Views/Account/ResetPassword.cshtml
+++ b/ShopManagement/Views/Account/ResetPassword.cshtml
@@ -42,7 +42,7 @@
                                 <form>
                                     <div class="form-group">
                                         <label for="number">Mobile</label>
-                                        <input id="number" type="number" class="form-control UserMobileNumber" name="number" tabindex="1">
+                                        <input id="number" type="number" class="form-control UserMobileNumber">
                                     </div>
                                     <div class="float-right">
                                         Got Password? then login
