--- a/ShopManagement/Views/Shop/AddShop.cshtml
+++ b/ShopManagement/Views/Shop/AddShop.cshtml
@@ -54,7 +54,10 @@
                                 <option value="">Select User</option>
                                 @foreach (var item in Model)
                                 {
-                                    <option value="@item.Id">@item.Name</option>
+                                    if (item.IsAdmin == 0)
+                                    {
+                                        <option value="@item.Id">@item.Name</option>
+                                    }
                                 }
                             </select>
                         </div>
