--- a/ShopManagement/Views/Order/AddOrder.cshtml
+++ b/ShopManagement/Views/Order/AddOrder.cshtml
@@ -71,8 +71,24 @@
                                 <input type="number" class="form-control" id="OrderAmount">
                             </div>
                             <div class="form-group">
+                                <label>Advance Amount</label>
+                                <input type="number" class="form-control" id="AdvanceAmount">
+                            </div>
+                            <div class="form-group">
+                                <label>Balance Amount</label>
+                                <input type="number" class="form-control" id="BalanceAmount" readonly>
+                            </div>
+                            <div class="form-group">
                                 <label>Image</label>
                                 <input type="file" class="form-control" style="padding:.375rem .75rem;" id="OrderImage">
+                            </div>
+                            <div class="form-group">
+                                <label>Image</label>
+                                <input type="file" class="form-control" style="padding:.375rem .75rem;" id="OrderImage2">
+                            </div>
+                            <div class="form-group">
+                                <label>Image</label>
+                                <input type="file" class="form-control" style="padding:.375rem .75rem;" id="OrderImage3">
                             </div>
                             <div class="form-group">
                                 <label>Notes</label>
