--- a/ShopManagement/Views/Order/ViewOrders.cshtml
+++ b/ShopManagement/Views/Order/ViewOrders.cshtml
@@ -4,10 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="~/assets/modules/datatables/DataTables-1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-<link href="~/assets/modules/datatables/datatables.min.css" rel="stylesheet" />
+<link href="~/assets/modules/datatables/datatables.min.css" rel="stylesheet" /><!-- CSS Libraries -->
+<link rel="stylesheet" href="../../assets/modules/chocolat/dist/css/chocolat.css">
 <style>
-    .SafariInfo, .PantInfo, .ShirtInfo {
-       
+    img.img-fluid.UserImage.SelectedOrderImage {
+        height: 50px !important;
+        width: 50px !important;
     }
 </style>
 <section class="section">
@@ -44,34 +46,60 @@
                                     <thead>
                                         <tr>
                                             <th scope="col">Image</th>
+                                            <th scope="col">Image</th>
+                                            <th scope="col">Image</th>
                                             <th scope="col">Bill Number</th>
                                             <th scope="col">Customer Name</th>
                                             <th scope="col">Satus</th>
                                             <th scope="col">Customer Mobile Number</th>
                                             <th scope="col">Remaining Days</th>
                                             <th scope="col">ShopName</th>
-                                            <th scope="col">Amount</th>
+                                            <th scope="col">Total Amount</th>
+                                            <th scope="col">Paid Amount</th>
+                                            <th scope="col">Balance Amount</th>
                                             <th scope="col">Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         @foreach (var item in Model)
                                         {
-                                            <tr>
-                                                <th scope="row"><img src="@item.Image" style="height:30px;width:30px" class="img img-responsive" /></th>
-                                                <td>@item.BillNumber</td>
-                                                <td>@item.CustomerName</td>
-                                                <td>@item.Status</td>
-                                                <td>@item.CustomerMobileNumber</td>
-                                                <td>@item.DaysRemaining</td>
-                                                <td>@item.ShopName</td>
-                                                <td>@item.Amount</td>
-                                                <td>
-                                                    <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-eye ViewOrderInfo" data-id="@item.Id"></i></a>
-                                                    <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-edit EditOrderInfo" data-id="@item.Id"></i></a>
-                                                    <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-trash DeleteOrder" data-id="@item.Id"></i></a>
-                                                </td>
-                                            </tr>
+                                        <tr>
+                                            <th scope="row">
+                                                <div class="chocolat-parent">
+                                                    <a href="@item.Image" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
+                                                        <img alt="image" src="@item.Image" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
+                                                    </a>
+                                                </div>
+                                            </th>
+                                            <td>
+                                                <div class="chocolat-parent">
+                                                    <a href="@item.Image" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
+                                                        <img alt="image" src="@item.Image" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
+                                                    </a>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="chocolat-parent">
+                                                    <a href="@item.Image" data-id="@item.Id" class="chocolat-image SelectedOrderImageExpand" title="Just an example">
+                                                        <img alt="image" src="@item.Image" data-id="@item.Id" class="img-fluid UserImage SelectedOrderImage">
+                                                    </a>
+                                                </div>
+                                            </td>
+                                            <td>@item.BillNumber</td>
+                                            <td>@item.CustomerName</td>
+                                            <td>@item.Status</td>
+                                            <td>@item.CustomerMobileNumber</td>
+                                            <td>@item.DaysRemaining</td>
+                                            <td>@item.ShopName</td>
+                                            <td>@item.Amount</td>
+                                            <td>@item.Amount</td>
+                                            <td>@item.Amount</td>
+                                            <td>
+                                                <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-eye ViewOrderInfo" data-id="@item.Id"></i></a>
+                                                <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-edit EditOrderInfo" data-id="@item.Id"></i></a>
+                                                <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-trash DeleteOrder" data-id="@item.Id"></i></a>
+                                            </td>
+                                        </tr>
                                         }
                                     </tbody>
                                 </table>
@@ -358,7 +386,6 @@
                         <div class="form-group">
                             <label>Choose shop</label>
                             <select class="form-control select2" id="SelctedShopId">
-                                
                             </select>
                         </div>
                         <div class="form-group">
@@ -434,7 +461,7 @@
                                 <input type="date" class="form-control datepicker" id="OrderEndDate">
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -722,6 +749,8 @@
 <script src="../../assets/modules/jquery.min.js"></script>
 <script src="~/assets/modules/datatables/DataTables-1.10.16/js/dataTables.bootstrap4.min.js"></script>
 <script src="~/assets/modules/datatables/datatables.min.js"></script>
+<!-- JS Libraies -->
+<script src="../../assets/modules/chocolat/dist/js/jquery.chocolat.min.js"></script>
 <script src="~/App-Assests/Js/Order.js"></script>
 <script>
     $("#OrdersTable").DataTable();
